<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aapdi Society</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="rating">Rating</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="reenter_email">Reenter Email</string>
    <string name="password">Password</string>
    <string name="female">female</string>
    <string name="male">Male</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="request_service">Request a Service</string>
    <string name="notifications">Notifications</string>
    <string name="gossip">Gossip</string>
    <string name="neighbourhood">Neighbourhood</string>
    <string name="title_activity_request_service">RequestServiceActivity</string>
    <string name="right_now">Right Now</string>
    <string name="long_term">Long Term</string>
    <string name="search">Search</string>
    <string name="add_location">Add this place</string>
    <string name="editText1">Name</string>
    <string name="add">Add a place</string>
    <string name="search_place">Search for a place</string>
    <string name="pick_date">Birthdate</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_phone">Phone Number</string>
    <string name="type_email">E-Mail</string>

    <string-array name="services">
        <item>Maid</item>
        <item>Cook</item>
        <item>Electrician</item>
        <item>Carpenter</item>
        <item>Doctor</item>
    </string-array>
    <string-array name="type_of_places">
        <item>Vegetables</item>
        <item>Laundry</item>
        <item>Groceries</item>
        <item>frozen food</item>
    </string-array>

    <string name="title_activity_search_nbh">SearchNbhActivity</string>
    <string name="title_activity_nbh">NbhActivity</string>
    <string name="title_activity_nbh_select">NbhSelectActivity</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_gossip">Gossip</string>
    <string name="title_activity_service_provider">Service Providers</string>
    <string name="title_activity_search_service">Search for Services</string>
    <string name="title_activity_select_contact">Select Contact</string>

</resources>